[workspace]
members = ["crypto", "enclave-tools", "picocert", "wsm-grant", "wsm-integrity"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
version = "0.1.1"

[workspace.dependencies]
bitcoin = { version = "0.30.0", features = [
  "rand",
  "serde",
] } # bitcoin version pinned by bdk
thiserror = "1.0.57"
