[workspace]
members = [
  "apdu",
  "cli",
  "ffi",
  "state",
  "teltra",
  "teltra-sys",
  "uniffi-bindgen",
  "wca",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
version = "0.1.1"

[workspace.dependencies]
anyhow = "1.0.79"
bdk = "0.28.0"
bitcoin = "0.29.2"           # bitcoin version pinned by bdk
lightning-invoice = "0.22.0"
miniscript = "9.0"           # miniscript version pinned by bdk
pcsc = "2.8.2"
prost = "0.11.9"
prost-build = "0.11.9"
serde = "1.0.196"
serde_json = "1.0.113"
sha2 = "0.10.8"
thiserror = "1.0.57"
uniffi = "0.24.3"

[profile.release]
lto = true
opt-level = "z"
