[workspace]
members = [
  "apdu",
  "core-ffi",
  "firmware-ffi",
  "frost",
  "lightning-support",
  "teltra",
  "teltra-sys",
  "uniffi-bindgen",
  "wca",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
version = "0.1.1"

[workspace.dependencies]
anyhow = "1.0.80"
bdk = "0.29.0"
bitcoin = "0.30.0"           # bitcoin version pinned by bdk
lightning-invoice = "0.29.0"
miniscript = "10.0"          # miniscript version pinned by bdk
pcsc = "2.8.2"
prost = "0.13.0"
prost-build = "0.13.0"
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
thiserror = "1.0.57"
uniffi = "0.25.0"

crypto = { path = "../../core/crypto" }
wsm-integrity = { path = "../../core/wsm-integrity" }

[profile.release]
lto = true
opt-level = "z"
