[package]
edition = { workspace = true }
name = "crypto"
publish = { workspace = true }
version = { workspace = true }

[features]
serde = ["bitcoin/serde", "dep:serde"]
spake2 = ["dep:boring-sys"]

[dependencies]
bitcoin = { workspace = true }
boring-sys = { version = "4.4.0", optional = true }
chacha20poly1305 = "0.10.1"
crypto-common = "0.1.6"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
hkdf = "0.12.4"
hmac = "0.12.1"
serde = { version = "1.0.197", features = ["derive"], optional = true }
sha2 = "0.10.8"
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
typenum = "1.17.0"
