[package]
edition = { workspace = true }
name = "crypto"
publish = { workspace = true }
version = { workspace = true }

[features]
all = ["noise", "spake2", "ssb"]
noise = ["dep:boring", "dep:p256", "dep:snow"]
spake2 = ["dep:boring-sys"]
ssb = ["dep:p256"]

[dependencies]
bitcoin = { workspace = true }
boring = { version = "4.7.0", optional = true }
boring-sys = { version = "4.4.0", optional = true }
chacha20poly1305 = "0.10.1"
crypto-common = "0.1.6"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
hkdf = "0.12.4"
hmac = "0.12.1"
miniscript = "10.0"
p256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdh",
], optional = true }
rand = "0.8.5"
secp256k1-zkp = { git = "https://github.com/wpaulino/rust-secp256k1-zkp.git", branch = "frost-bindings-bitkey", features = [
  "global-context",
  "rand-std",
  "serde",
  "std",
] }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
snow = { version = "0.9.6", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0.86"
bdk = { version = "0.29.0", features = ["rpc"] }
hex = "0.4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
typenum = "1.17.0"
