[package]
edition = { workspace = true }
name = "picocert"
publish = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
secp256k1 = { version = "0.29.0", features = [
  "global-context",
  "hashes-std",
  "rand-std",
] }
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"

[[bin]]
name = "picocert-ca-tool"
path = "src/main.rs"
