[package]
edition = { workspace = true }
name = "crypto"
publish = { workspace = true }
version = { workspace = true }

[dependencies]
bitcoin = { workspace = true }
boring-sys = "4.4.0"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
hmac = "0.12.1"
lightning-invoice = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
uniffi = { workspace = true }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
typenum = "1.17"
